<resources>
    <string name="app_name" translatable="false">My Application</string>

    <string name="open_drawer" translatable="false">Open</string>
    <string name="close_drawer" translatable="false">Close</string>
    <string name="thoat">Exit</string>
    <string name="them">Add</string>
    <string name="nhap_ten_dien_vien">Enter the actor\'s name</string>
    <string name="language">English</string>
    <string name="them_dien_vien">Add actors</string>
    <string name="them_lich_chieu">Add showtime</string>
    <string name="ngay_chieu">Show date</string>
    <string name="gio_bat_dau">Start time</string>
    <string name="gio_ket_thuc">End time</string>
    <string name="ten_phim">Movie\'s name</string>
    <string name="ten_rap">Theater name</string>
    <string name="tim_kiem_phim">Search for movies</string>
    <string name="the_loai">Category</string>
    <string name="tai_khoan_email">Email account</string>
    <string name="mat_khau">Password</string>
    <string name="dang_nhap">Log in</string>
    <string name="hoac">or</string>
    <string name="dang_ky">Register</string>
    <string name="quen_mat_khau">Forgot password?</string>
    <string name="danh_sach_dien_vien">List of actors</string>
    <string name="ban_da_co_tai_khoan">Do you already have an account?</string>
    <string name="tro_lai">Back</string>
    <string name="nhap_email">Enter email</string>
    <string name="ten_nguoi_dung">User name</string>
    <string name="nhap_lai_mat_khau">Enter the password</string>
    <string name="sua_ten_dien_vien">Edit actor name</string>
    <string name="sua_thong_tin_phim">Edit movie information</string>
    <string name="sua_lich_chieu">Edit show schedule</string>
    <string name="sua_rap_phim">Edit movie theater</string>
    <string name="lich_chieu">Showtimes</string>
    <string name="phim_hot_hom_nay">Hot Movies Today</string>
    <string name="them_phim">Add movies</string>
    <string name="them_rap">Add theaters</string>
    <string name="ho_so_ca_nhan">Profile</string>
    <string name="ve_da_mua">Tickets purchased</string>
    <string name="dang_xuat">Log out</string>
    <string name="xin_chao">Hello</string>
    <string name="dat_ve">Book tickets</string>
    <string name="phim">Movie</string>
    <string name="rap">Theater</string>
    <string name="tai_khoan">Account</string>
    <string name="sua">Edit</string>
    <string name="xoa">Delete</string>
    <string name="quan_li_phim">Movie management</string>
    <string name="quan_li_rap">Theater management</string>
    <string name="quan_li_ve">Ticket management</string>
    <string name="quan_li_lich_chieu">Manage showtimes</string>
    <string name="quan_li_tai_khoan">Account management</string>
    <string name="mua_ve">Buy ticket</string>
    <string name="tieng_viet">Vietnamese</string>
    <string name="gui_xac_nhan_den_email">Gửi xác nhận đến email</string>
    <string name="man_hinh">Màn hình</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sap_ra_mat">Sắp ra mắt</string>
    <string name="luu">Lưu</string>
    <string name="dien_vien">Diễn viên</string>
    <string name="mo_ta">Mô tả</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="anh">Ảnh</string>
    <string name="gia_ve">Giá vé</string>
    <string name="thoi_luong">Thời lượng</string>
    <string name="dao_dien">Đạo diễn</string>
    <string name="trailer">Trailer</string>
    <string name="thanh_toan_thanh_cong">Thanh toán thành công</string>
    <string name="tro_ve_trang_chu">Trở về trang chủ</string>
    <string name="chi_tiet_hoa_don">Chi tiết hóa đơn</string>
    <string name="so_ghe">Số ghế</string>
    <string name="tong_tieng">Tổng tiền</string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="thanh_toan_bang_momo">Thanh toán bằng momo</string>
    <string name="chon_rap">Chọn rạp</string>
    <string name="chon_lich_chieu">Chọn lịch chiếu</string>
    <string name="chon_ghe">Chọn ghế</string>
    <string name="ghe_trong">Ghế trống</string>
    <string name="ghe_dang_chon">Ghế đang chọn</string>
    <string name="ghe_da_ban">Ghế đã bán</string>
    <string name="thong_bao">Thông báo</string>
    <string name="so_luong_ghe">Số lượng ghế</string>
</resources>