<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/movie_manager" android:title="@string/quan_li_phim" android:icon="@drawable/script"/>
    <item android:id="@+id/theater_manager" android:title="@string/quan_li_rap" android:icon="@drawable/performance"/>
    <item android:id="@+id/ticket_manager" android:title="@string/quan_li_ve" android:icon="@drawable/income"/>
    <item android:id="@+id/showtime_manager" android:title="@string/quan_li_lich_chieu" android:icon="@drawable/calendar"/>
    <item android:id="@+id/account_manager" android:title="@string/quan_li_tai_khoan" android:icon="@drawable/consultant"/>
    <item android:id="@+id/logout_manager" android:title="@string/dang_xuat" android:icon="@drawable/exit"/>
</menu>